if the message about new or left chat members is about any of anarucombots ONLY delete that message